<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/button_profile"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/button_profile"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginBottom="540sp"
        android:layout_marginStart="-310sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_list_documents"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/button_list_documents"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginBottom="540sp"
        android:layout_marginStart="-155sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_list_history"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/button_list_history"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginBottom="540sp"
        android:layout_marginStart="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_list_need"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/button_list_need"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginBottom="540sp"
        android:layout_marginStart="155sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/button_setting"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginBottom="540sp"
        android:layout_marginStart="310sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:hint="@string/NLS"
        android:textColorHint="@color/grey"
        android:layout_marginBottom="370sp"
        android:layout_marginStart="90sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_voz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:hint="@string/Voz"
        android:textColorHint="@color/grey"
        android:layout_marginBottom="300sp"
        android:layout_marginStart="90sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:hint="@string/Num"
        android:textColorHint="@color/grey"
        android:layout_marginBottom="230sp"
        android:layout_marginStart="90sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_mk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:hint="@string/Stat"
        android:textColorHint="@color/grey"
        android:layout_marginBottom="160sp"
        android:layout_marginStart="90sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:contentDescription="@string/Image"
        android:background="@drawable/prof_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250sp"
        android:layout_marginEnd="250sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>